--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,26 +1,19 @@
 <resources>
     <string name="app_name">PicTree</string>
     <string name="title_activity_main_feed">MainFeedActivity</string>
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Android Studio</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
+    <string name="description_error">Description not found.</string>
 
     <string name="menu_home">Home</string>
     <string name="menu_profile">My Profile</string>
-    <string name="menu_slideshow">Slideshow</string>
-    <string name="menu_tools">Tools</string>
-    <string name="menu_share">Share</string>
-    <string name="menu_send">Send</string>
-    <string name="profile_branches">Branches</string>
+    <string name="menu_posts">Your Posts</string>
     <string name="profile_roots">Roots</string>
     <string name="toolbar_search_label">Search Posts</string>
-    <string name="follow_label">Follow</string>
     <string name="not_found_label">Matching Posts Not Found</string>
     <string name="like_button_label">Like</string>
 
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
